@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.06-4.01
-Date: 2009-4-19
+Version: 0.06-5
+Date: 2009-4-22
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Masanao Yajima <my2167@columbia.edu>,
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2009-04-20 21:18:52 UTC; SUYS
+Packaged: 2009-04-22 20:50:07 UTC; SUYS
 Repository: CRAN
-Date/Publication: 2009-04-21 06:57:14
+Date/Publication: 2009-04-23 07:11:44
